--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 DJANGO_SETTINGS_MODULE=ApiTesting.settings
 
 python_files = tests.py test_*.py
+
+addopts = -v --nomigrations --cov=. --cov-report=html
